# generated/python/resources/__init__.py
@@ -1,19 +1,23 @@
 # This file was auto-generated by Fern from our API Definition.
 
-from . import event, span, trace
+from . import event, metric, span, trace
 from .event import CreateEventRequest, Event
+from .metric import CreateMetricRequest, Metric
 from .span import CreateSpanRequest, Span, UpdateSpanRequest
 from .trace import CreateTraceRequest, Trace
 
 __all__ = [
     "CreateEventRequest",
+    "CreateMetricRequest",
     "CreateSpanRequest",
     "CreateTraceRequest",
     "Event",
+    "Metric",
     "Span",
     "Trace",
     "UpdateSpanRequest",
     "event",
+    "metric",
     "span",
     "trace",
 ]
