# generated/python/resources/metric/__init__.py
@@ -1,0 +1,5 @@
+# This file was auto-generated by Fern from our API Definition.
+
+from .types import CreateMetricRequest, Metric
+
+__all__ = ["CreateMetricRequest", "Metric"]
