# generated/python/resources/metric/types/metric.py
@@ -1,0 +1,29 @@
+# This file was auto-generated by Fern from our API Definition.
+
+import datetime as dt
+import typing
+
+import pydantic
+
+from ....core.datetime_utils import serialize_datetime
+
+
+class Metric(pydantic.BaseModel):
+    id: str
+    name: str
+    value: int
+    observation_id: typing.Optional[str] = pydantic.Field(alias="observationId")
+    timestamp: dt.datetime
+
+    def json(self, **kwargs: typing.Any) -> str:
+        kwargs_with_defaults: typing.Any = {"by_alias": True, "exclude_unset": True, **kwargs}
+        return super().json(**kwargs_with_defaults)
+
+    def dict(self, **kwargs: typing.Any) -> typing.Dict[str, typing.Any]:
+        kwargs_with_defaults: typing.Any = {"by_alias": True, "exclude_unset": True, **kwargs}
+        return super().dict(**kwargs_with_defaults)
+
+    class Config:
+        frozen = True
+        allow_population_by_field_name = True
+        json_encoders = {dt.datetime: serialize_datetime}
